--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -185,6 +185,7 @@ endif()
 REGISTER_OUT_PLUGIN("out_retry")
 REGISTER_OUT_PLUGIN("out_slack")
 REGISTER_OUT_PLUGIN("out_splunk")
+REGISTER_OUT_PLUGIN("out_strava")
 REGISTER_OUT_PLUGIN("out_stackdriver")
 REGISTER_OUT_PLUGIN("out_stdout")
 REGISTER_OUT_PLUGIN("out_tcp")
